--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "private": true,
   "version": "1.0.0",
   "description": "WiFiShare - Transfert de fichiers local via WiFi",
-  "author": "Zeltys",
+  "author": "Brainditech",
   "main": "dist-electron/main.js",
   "scripts": {
     "dev": "vite",
